--- a/hfs24q3r.html
+++ b/hfs24q3r.html
@@ -1,7 +1,9 @@
-<!Doctype html>
-
+<!DOCTYPE html>
 <html>
-
-   <p>This is Joshua's Github Repository </p> 
-    
+   <head>
+       <title>Joshua's Github Repository</title>
+   </head>
+   <body>
+       <p>This is Joshua's Github Repository.</p>
+   </body>
 </html>
