--- a/hfs24q3r.html
+++ b/hfs24q3r.html
@@ -4,6 +4,6 @@
        <title>Joshua's Github Repository</title>
    </head>
    <body>
-       <p>This is Joshua's Github Repository.</p>
+       <p>This is Joshua's Github Repository. In this repository, I will be listing the Assignemnts that I have Done so far: Assignment 1 - This assignment aims to reinforce the basic concepts of Android Studio which were taught to us by our professor.</p>
    </body>
 </html>
